# Orchestrator

./: .gitignore  autobot-beta.md  autobot-command-pane-display-fixes.md  autobot-content-scaling.md  autobot-diff-fullscreen.md  autobot-diffselector-integrated.md  autobot-diffselector.md  autobot-edit-commands-and-pane-bug.md  autobot-filterable-combo-refactor-2026-06-11.md  autobot-filterable-combo-refactor-ctx-iter-0-refactor-commit-model-2026-06-11.md  autobot-filterable-dropdowns.md  autobot-fuzzy-filterable-combo-2026-06-18.md  autobot-fuzzy-filterable-combo-ctx-iter-0-shared-fuzzy-highlight-module-2026-06-18.md  autobot-fuzzy-filterable-combo-ctx-iter-1-fuzzy-popup-combo-2026-06-18.md  autobot-github-integration.md  autobot-github-panel-fixes.md  autobot-global-spotlight-shortcut-2026-06-13.md  autobot-loading-screens.md  autobot-merge-base-auto.md  autobot-pr-duplicate-status-removal.md  autobot-pr-ignore-checks-and-grouping-2026-06-13.md  autobot-pr-ignore-checks-and-grouping-ctx-iter-2-pr-cache-2026-06-13.md  autobot-pr-ignore-checks-and-grouping-ctx-iter-3-mute-and-grouping-2026-06-13.md  autobot-pr-list-descriptive.md  autobot-silent-exception-fixes.md  autobot-spotlight-commit-model-2026-06-11.md  autobot-spotlight-commit-model-ctx-iter-0-commit-execute-2026-06-11.md  autobot-spotlight-commit-model-ctx-iter-1-inline-chips-2026-06-11.md  autobot-spotlight-floating-overlay-2026-06-13.md  autobot-spotlight-project-editor-token-2026-06-13.md  autobot-worktree-manager.md  autobot.md  testfile.txt
worktree-manager/: README.md  add_fake_repos.py  (+48 more)
(+302 files in other folders)
